--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@angular/core": "~9.0.7",
     "@angular/fire": "^6.1.4",
     "@angular/forms": "~9.0.7",
+    "@angular/google-maps": "^11.2.2",
     "@angular/material": "^11.2.2",
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
     "firebase": "^8.2.9",
+    "here-js-api": "^2.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
